--- a/tp-02/CMakeLists.txt
+++ b/tp-02/CMakeLists.txt
@@ -4,3 +4,8 @@ add_executable(tp2-reminders
     Parsing.cpp
     Parsing.h
 )
+add_executable(tp2-count_occ
+    count_occ.cpp
+    Histogram.cpp
+    Histogram.h
+)
